VSCodeの配色をランダム化しkickoff処理を一度きりに変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,53 @@
 {
   "workbench.colorCustomizations": {
-    "editor.background": "#3dda9715",
-    "editor.foreground": "#16edd4",
-    "editor.lineHighlightBackground": "rgba(148, 242, 184, 0.79)",
-    "editor.selectionBackground": "rgba(22, 114, 87, 0.81)",
-    "editor.selectionHighlightBackground": "rgba(179, 40, 254, 0.85)",
-    "editor.findMatchBackground": "rgba(150, 103, 211, 0.74)",
-    "editor.findMatchHighlightBackground": "rgba(11, 29, 180, 0.86)",
-    "editorCursor.foreground": "#274dd0",
-    "editorWhitespace.foreground": "#4ba01b40",
-    "editorIndentGuide.background": "#fa62be30",
-    "editorIndentGuide.activeBackground": "#68a82370",
-    "editorLineNumber.foreground": "#da2b7380",
-    "editorLineNumber.activeForeground": "#234d8b",
-    "editorRuler.foreground": "#f54b9350",
-    "editorBracketMatch.background": "rgba(19, 128, 112, 0.89)",
-    "editorBracketMatch.border": "#d7b8d9",
-    "sideBar.background": "#dd67f410",
-    "sideBar.foreground": "#b7ecf0",
-    "sideBar.border": "#9c530b50",
-    "sideBarTitle.foreground": "#2d9773",
-    "sideBarSectionHeader.background": "#839ee920",
-    "sideBarSectionHeader.foreground": "#3564d1",
-    "list.activeSelectionBackground": "rgba(127, 172, 179, 0.88)",
-    "list.activeSelectionForeground": "#2d1207",
-    "list.hoverBackground": "rgba(110, 43, 67, 1.00)",
-    "list.inactiveSelectionBackground": "rgba(107, 252, 201, 0.95)",
-    "statusBar.background": "#45685290",
-    "statusBar.foreground": "#a1280b",
-    "statusBar.border": "#2fced550",
-    "activityBar.background": "#0858e715",
-    "activityBar.foreground": "#f23c68",
-    "activityBar.border": "#14cf2550",
-    "titleBar.activeBackground": "#2d42c720",
-    "titleBar.activeForeground": "#846128",
-    "titleBar.inactiveBackground": "#2f81a610",
-    "titleBar.inactiveForeground": "#e9074580",
-    "tab.activeBackground": "#cb989520",
-    "tab.activeForeground": "#4815c7",
-    "tab.inactiveBackground": "#c69e1210",
-    "tab.inactiveForeground": "#664c0780",
-    "tab.border": "#0838a330",
-    "terminal.background": "#63445905",
-    "terminal.foreground": "#659ed1",
-    "terminalCursor.background": "#476c9a",
-    "terminalCursor.foreground": "#3a0577",
-    "panel.background": "#fc0bc008",
-    "panel.border": "#ddfd9b40",
-    "panelTitle.activeForeground": "#aa151a",
-    "panelTitle.inactiveForeground": "#0f853070"
+    "editor.background": "#2e1f23",
+    "editor.foreground": "#e1d0d5",
+    "editor.lineHighlightBackground": "#75493d30",
+    "editor.selectionBackground": "#75493d50",
+    "editor.selectionHighlightBackground": "#75493d35",
+    "editor.findMatchBackground": "#3d756560",
+    "editor.findMatchHighlightBackground": "#3d756540",
+    "editorCursor.foreground": "#cb9081",
+    "editorWhitespace.foreground": "#a58d9440",
+    "editorIndentGuide.background": "#a58d9420",
+    "editorIndentGuide.activeBackground": "#a58d9440",
+    "editorLineNumber.foreground": "#a58d94",
+    "editorLineNumber.activeForeground": "#cab5bb",
+    "editorRuler.foreground": "#a58d9430",
+    "editorBracketMatch.background": "#75493d30",
+    "editorBracketMatch.border": "#cb9081",
+    "sideBar.background": "#40262e",
+    "sideBar.foreground": "#e1d0d5",
+    "sideBar.border": "#a58d9420",
+    "sideBarTitle.foreground": "#e1d0d5",
+    "sideBarSectionHeader.background": "#532d38",
+    "sideBarSectionHeader.foreground": "#e1d0d5",
+    "list.activeSelectionBackground": "#75493d40",
+    "list.activeSelectionForeground": "#e1d0d5",
+    "list.hoverBackground": "#75493d20",
+    "list.inactiveSelectionBackground": "#75493d15",
+    "statusBar.background": "#532d38",
+    "statusBar.foreground": "#e1d0d5",
+    "statusBar.border": "#a58d9420",
+    "activityBar.background": "#532d38",
+    "activityBar.foreground": "#e1d0d5",
+    "activityBar.border": "#a58d9420",
+    "titleBar.activeBackground": "#532d38",
+    "titleBar.activeForeground": "#e1d0d5",
+    "titleBar.inactiveBackground": "#40262e",
+    "titleBar.inactiveForeground": "#cab5bb",
+    "tab.activeBackground": "#2e1f23",
+    "tab.activeForeground": "#e1d0d5",
+    "tab.inactiveBackground": "#40262e",
+    "tab.inactiveForeground": "#cab5bb",
+    "tab.border": "#a58d9415",
+    "terminal.background": "#2e1f23",
+    "terminal.foreground": "#e1d0d5",
+    "terminalCursor.background": "#40262e",
+    "terminalCursor.foreground": "#cb9081",
+    "panel.background": "#2e1f23",
+    "panel.border": "#a58d9420",
+    "panelTitle.activeForeground": "#e1d0d5",
+    "panelTitle.inactiveForeground": "#cab5bb"
   }
 }
